/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-19 19:30 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * utils/tutorial/tutor.prg
     ! Error reported by Itamar Lins
     ! Please after confirm compile/run from tutorial remove commented lines
     ! Seems ok but confirmed on win only, about a new parameter ""
     ! please confirm too on hbp -lpcre it does not exists on user machine

2025-04-19 16:30 UTC+0200 Wilfried Brunken DF7BE
* contrib/qrcode/qrdecode/ReadMe.txt
* contrib/qrcode/qrdecode/qrdecode.hbp
* contrib/qrcode/qrdecode/qrdecode.prg
* contrib/qrcode/qrencode/Makefile (moved)
* contrib/qrcode/qrencode/QR-Code-generator-master (moved with all subdirectories)
* contrib/qrcode/qrencode/Readme.txt
* contrib/qrcode/qrencode/build.sh
* contrib/qrcode/qrencode/hb_qrencode.hbp
* contrib/qrcode/qrencode/qrencode.hbp
* contrib/qrcode/test/hbmk.hbm (New)
* D contrib/qrdecode (moved)
* D contrib/qrencode (empty in case of move, deleted)
  - Check for moved QR code contrib code on LINUX,
    corrections, Windows follows.
  - now directory qrcode contains sub directories by
    Jose M. Quintas qrdecode and qrencode
  - so qrencode/QR-Code-generator-master also moved to
    qrcode/qrencode
  - Empty directories removed
  - Path corection in hbp files and Readme's


2025-04-19 15:10 UTC+0200 Wilfried Brunken DF7BE
 * clean.sh
   ! More cleanings:
   ! For next update need to wait
   ! for finishing the recent project of
   ! Jose Quintas

2025-04-18 13:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/demogetdesktopsize.prg
   - samples/demogetdesktopsize.hbp
      ! removed, there are more samples using it
   - samples/*.prg