@@ -34,9 +34,9 @@ jobs:
          cd /tmp/harbour
          sudo make install
          cd /tmp/hwgui
-         hbmk2 hwgui.hbp -workdir=/tmp -w3
-         hbmk2 hbxml.hbp -workdir=/tmp -w3
-         hbmk2 procmisc.hbp -workdir=/tmp -w3
-         hbmk2 hwgdebug.hbp -workdir=/tmp -w3
+         hbmk2 hwgui.hbp -workdir=/tmp -w3 -es2
+         hbmk2 hbxml.hbp -workdir=/tmp -w3 -es2
+         hbmk2 procmisc.hbp -workdir=/tmp -w3 -es2
+         hbmk2 hwgdebug.hbp -workdir=/tmp -w3 -es2
          cd /tmp/hwgui/samples
-         hbmk2 allhbp.hbp -workdir=/tmp -w3 -es0
+         hbmk2 allhbp.hbp -workdir=/tmp -w3 -es2
